--- a/NF_Studio/.obsidian/workspace
+++ b/NF_Studio/.obsidian/workspace
@@ -9,7 +9,7 @@
         "state": {
           "type": "markdown",
           "state": {
-            "file": "Area/WikiData/Tools/DataBase/ESE.md",
+            "file": "ALTIMIT OS/ECS/ECS.md",
             "mode": "source"
           }
         },
@@ -21,7 +21,7 @@
         "state": {
           "type": "markdown",
           "state": {
-            "file": "Area/WikiData/Tools/DataBase/ESE.md",
+            "file": "ALTIMIT OS/ECS/ECS.md",
             "mode": "preview"
           }
         },
@@ -89,7 +89,7 @@
             "state": {
               "type": "backlink",
               "state": {
-                "file": "Area/WikiData/Tools/DataBase/ESE.md",
+                "file": "ALTIMIT OS/ECS/ECS.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -137,15 +137,15 @@
   },
   "active": "61b8c00a92621ac7",
   "lastOpenFiles": [
+    "ALTIMIT OS/ECS/ECS.md",
+    "ALTIMIT OS/ECS/DOTS.md",
+    "ALTIMIT OS/ECS/Job System.md",
     "Area/WikiData/Tools/DataBase/ESE.md",
     "Area/WikiData/Tools/DataBase/MongoDB.md",
     "Area/WikiData/Tools/DataBase/未命名.md",
     "Area/WikiData/Tools/GDevelop.md",
     "Game Pattern.md",
     "Area/WikiData/Language/Web/CSS.md",
-    "Area/WikiData/Language/微服務.md",
-    "Area/WikiData/Language/訊息佇列.md",
-    "ALTIMIT OS/Studio.md",
-    "ALTIMIT OS/UnityCsharp.md"
+    "Area/WikiData/Language/微服務.md"
   ]
 }
