--- a/NF_Studio/.obsidian/appearance.json
+++ b/NF_Studio/.obsidian/appearance.json
@@ -1,5 +1,7 @@
 {
   "theme": "obsidian",
-  "obsidianCss": true,
-  "baseFontSize": 16
+  "baseFontSize": 16,
+  "translucency": false,
+  "cssTheme": "Traffic Lights",
+  "baseFontSizeAction": true
 }
